fixed author field

--- a/Sandbox/PRAW.ipynb
+++ b/Sandbox/PRAW.ipynb
@@ -336,290 +336,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>self</th>\n",
-       "      <th>text</th>\n",
-       "      <th>comments</th>\n",
-       "      <th>author</th>\n",
-       "      <th>name</th>\n",
-       "      <th>time_created</th>\n",
-       "      <th>upvote_ratio</th>\n",
-       "      <th>ups</th>\n",
-       "      <th>downs</th>\n",
-       "      <th>awarders</th>\n",
-       "      <th>awards</th>\n",
-       "      <th>total_awards</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Times Square right now</td>\n",
-       "      <td>False</td>\n",
-       "      <td></td>\n",
-       "      <td>[]</td>\n",
-       "      <td>SomeGuyInDeutschland</td>\n",
-       "      <td>t3_l8rf4k</td>\n",
-       "      <td>1.612030e+09</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>411106</td>\n",
-       "      <td>8389.918367</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'giver_coin_reward': 0, 'subreddit_id': None...</td>\n",
-       "      <td>3510</td>\n",
-       "      <td>https://v.redd.it/x64z70f7eie61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>UPVOTE so everyone sees we got SUPPORT</td>\n",
-       "      <td>False</td>\n",
-       "      <td></td>\n",
-       "      <td>[]</td>\n",
-       "      <td>vrweensy</td>\n",
-       "      <td>t3_l6wu59</td>\n",
-       "      <td>1.611841e+09</td>\n",
-       "      <td>0.97</td>\n",
-       "      <td>314795</td>\n",
-       "      <td>9735.927835</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'giver_coin_reward': 0, 'subreddit_id': None...</td>\n",
-       "      <td>1270</td>\n",
-       "      <td>https://i.redd.it/sgoqy8nyt2e61.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>GME YOLO update — Jan 28 2021</td>\n",
-       "      <td>False</td>\n",
-       "      <td></td>\n",
-       "      <td>[]</td>\n",
-       "      <td>DeepFuckingValue</td>\n",
-       "      <td>t3_l78uct</td>\n",
-       "      <td>1.611868e+09</td>\n",
-       "      <td>0.97</td>\n",
-       "      <td>280414</td>\n",
-       "      <td>8672.597938</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'giver_coin_reward': 0, 'subreddit_id': None...</td>\n",
-       "      <td>8221</td>\n",
-       "      <td>https://i.redd.it/opzucppb15e61.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>GME YOLO month-end update — Jan 2021</td>\n",
-       "      <td>False</td>\n",
-       "      <td></td>\n",
-       "      <td>[]</td>\n",
-       "      <td>DeepFuckingValue</td>\n",
-       "      <td>t3_l846a1</td>\n",
-       "      <td>1.611954e+09</td>\n",
-       "      <td>0.97</td>\n",
-       "      <td>251656</td>\n",
-       "      <td>7783.175258</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'giver_coin_reward': 0, 'subreddit_id': None...</td>\n",
-       "      <td>4863</td>\n",
-       "      <td>https://i.redd.it/r557em3t5ce61.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>It’s treason then</td>\n",
-       "      <td>False</td>\n",
-       "      <td></td>\n",
-       "      <td>[]</td>\n",
-       "      <td>keenfeed</td>\n",
-       "      <td>t3_l881ia</td>\n",
-       "      <td>1.611964e+09</td>\n",
-       "      <td>0.97</td>\n",
-       "      <td>224942</td>\n",
-       "      <td>6956.969072</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'giver_coin_reward': 0, 'subreddit_id': None...</td>\n",
-       "      <td>414</td>\n",
-       "      <td>https://i.redd.it/d3t66lv1yce61.jpg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>CLASS ACTION AGAINST ROBINHOOD. Allowing peopl...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>LEAVE ROBINHOOD. They dont deserve to make mon...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>does-it-mater</td>\n",
-       "      <td>t3_l6x130</td>\n",
-       "      <td>1.611842e+09</td>\n",
-       "      <td>0.97</td>\n",
-       "      <td>221942</td>\n",
-       "      <td>6864.185567</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'giver_coin_reward': 0, 'subreddit_id': None...</td>\n",
-       "      <td>961</td>\n",
-       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>GME YOLO update — Feb 19 2021</td>\n",
-       "      <td>False</td>\n",
-       "      <td></td>\n",
-       "      <td>[]</td>\n",
-       "      <td>DeepFuckingValue</td>\n",
-       "      <td>t3_lnqgz8</td>\n",
-       "      <td>1.613769e+09</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>215961</td>\n",
-       "      <td>11366.368421</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'giver_coin_reward': 0, 'subreddit_id': None...</td>\n",
-       "      <td>14966</td>\n",
-       "      <td>https://i.redd.it/2xswz0h11ii61.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>GME YOLO update — Jan 27 2021 ----------------...</td>\n",
-       "      <td>False</td>\n",
-       "      <td></td>\n",
-       "      <td>[]</td>\n",
-       "      <td>DeepFuckingValue</td>\n",
-       "      <td>t3_l6ekdz</td>\n",
-       "      <td>1.611782e+09</td>\n",
-       "      <td>0.96</td>\n",
-       "      <td>210947</td>\n",
-       "      <td>8789.458333</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'giver_coin_reward': 0, 'subreddit_id': None...</td>\n",
-       "      <td>5268</td>\n",
-       "      <td>https://i.redd.it/a309gkm5yxd61.png</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Used some of my GME tendies to buy Nintendo Sw...</td>\n",
-       "      <td>False</td>\n",
-       "      <td></td>\n",
-       "      <td>[]</td>\n",
-       "      <td>mpwrd</td>\n",
-       "      <td>t3_l8c0u4</td>\n",
-       "      <td>1.611975e+09</td>\n",
-       "      <td>0.92</td>\n",
-       "      <td>210596</td>\n",
-       "      <td>18312.695652</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'giver_coin_reward': 0, 'subreddit_id': None...</td>\n",
-       "      <td>1624</td>\n",
-       "      <td>https://www.nbcdfw.com/news/local/north-texas-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>GME YOLO update — Feb 1 2021</td>\n",
-       "      <td>False</td>\n",
-       "      <td></td>\n",
-       "      <td>[]</td>\n",
-       "      <td>DeepFuckingValue</td>\n",
-       "      <td>t3_lae6j0</td>\n",
-       "      <td>1.612214e+09</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>210560</td>\n",
-       "      <td>11082.105263</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[{'giver_coin_reward': 0, 'subreddit_id': None...</td>\n",
-       "      <td>6401</td>\n",
-       "      <td>https://i.redd.it/og8ca1xskxe61.png</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                               title   self  \\\n",
-       "0                             Times Square right now  False   \n",
-       "1             UPVOTE so everyone sees we got SUPPORT  False   \n",
-       "2                      GME YOLO update — Jan 28 2021  False   \n",
-       "3               GME YOLO month-end update — Jan 2021  False   \n",
-       "4                                  It’s treason then  False   \n",
-       "5  CLASS ACTION AGAINST ROBINHOOD. Allowing peopl...   True   \n",
-       "6                      GME YOLO update — Feb 19 2021  False   \n",
-       "7  GME YOLO update — Jan 27 2021 ----------------...  False   \n",
-       "8  Used some of my GME tendies to buy Nintendo Sw...  False   \n",
-       "9                       GME YOLO update — Feb 1 2021  False   \n",
-       "\n",
-       "                                                text comments  \\\n",
-       "0                                                          []   \n",
-       "1                                                          []   \n",
-       "2                                                          []   \n",
-       "3                                                          []   \n",
-       "4                                                          []   \n",
-       "5  LEAVE ROBINHOOD. They dont deserve to make mon...       []   \n",
-       "6                                                          []   \n",
-       "7                                                          []   \n",
-       "8                                                          []   \n",
-       "9                                                          []   \n",
-       "\n",
-       "                 author       name  time_created  upvote_ratio     ups  \\\n",
-       "0  SomeGuyInDeutschland  t3_l8rf4k  1.612030e+09          0.98  411106   \n",
-       "1              vrweensy  t3_l6wu59  1.611841e+09          0.97  314795   \n",
-       "2      DeepFuckingValue  t3_l78uct  1.611868e+09          0.97  280414   \n",
-       "3      DeepFuckingValue  t3_l846a1  1.611954e+09          0.97  251656   \n",
-       "4              keenfeed  t3_l881ia  1.611964e+09          0.97  224942   \n",
-       "5         does-it-mater  t3_l6x130  1.611842e+09          0.97  221942   \n",
-       "6      DeepFuckingValue  t3_lnqgz8  1.613769e+09          0.95  215961   \n",
-       "7      DeepFuckingValue  t3_l6ekdz  1.611782e+09          0.96  210947   \n",
-       "8                 mpwrd  t3_l8c0u4  1.611975e+09          0.92  210596   \n",
-       "9      DeepFuckingValue  t3_lae6j0  1.612214e+09          0.95  210560   \n",
-       "\n",
-       "          downs awarders                                             awards  \\\n",
-       "0   8389.918367       []  [{'giver_coin_reward': 0, 'subreddit_id': None...   \n",
-       "1   9735.927835       []  [{'giver_coin_reward': 0, 'subreddit_id': None...   \n",
-       "2   8672.597938       []  [{'giver_coin_reward': 0, 'subreddit_id': None...   \n",
-       "3   7783.175258       []  [{'giver_coin_reward': 0, 'subreddit_id': None...   \n",
-       "4   6956.969072       []  [{'giver_coin_reward': 0, 'subreddit_id': None...   \n",
-       "5   6864.185567       []  [{'giver_coin_reward': 0, 'subreddit_id': None...   \n",
-       "6  11366.368421       []  [{'giver_coin_reward': 0, 'subreddit_id': None...   \n",
-       "7   8789.458333       []  [{'giver_coin_reward': 0, 'subreddit_id': None...   \n",
-       "8  18312.695652       []  [{'giver_coin_reward': 0, 'subreddit_id': None...   \n",
-       "9  11082.105263       []  [{'giver_coin_reward': 0, 'subreddit_id': None...   \n",
-       "\n",
-       "   total_awards                                                url  \n",
-       "0          3510                    https://v.redd.it/x64z70f7eie61  \n",
-       "1          1270                https://i.redd.it/sgoqy8nyt2e61.png  \n",
-       "2          8221                https://i.redd.it/opzucppb15e61.png  \n",
-       "3          4863                https://i.redd.it/r557em3t5ce61.png  \n",
-       "4           414                https://i.redd.it/d3t66lv1yce61.jpg  \n",
-       "5           961  https://www.reddit.com/r/wallstreetbets/commen...  \n",
-       "6         14966                https://i.redd.it/2xswz0h11ii61.png  \n",
-       "7          5268                https://i.redd.it/a309gkm5yxd61.png  \n",
-       "8          1624  https://www.nbcdfw.com/news/local/north-texas-...  \n",
-       "9          6401                https://i.redd.it/og8ca1xskxe61.png  "
+       "'<praw.models.reddit.submission.SubmissionFlair object at 0x00000209BACB3580>'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_wsb"
+    "str(submission.flair)"
    ]
   },
   {
