cleaned up and made comparison with kaggle data

--- a/Sandbox/PRAW.ipynb
+++ b/Sandbox/PRAW.ipynb
@@ -51,34 +51,12 @@
     "    if comments:\n",
     "        submission.comments.replace_more(limit=0)\n",
     "        for comment in submission.comments: \n",
-    "            post = {} # put this here\n",
-    "            post['author'] = comment.author\n",
-    "            post['body'] = comment.body\n",
-    "            post['awards'] = comment.all_awardings\n",
-    "            post['score'] = comment.score\n",
-    "            post['parent_id'] = comment.parent_id\n",
-    "            post['id'] = comment.id\n",
-    "\n",
+    "            post = vars(comment)\n",
     "            postlist.append(post)\n",
     "\n",
-    "    content = {\n",
-    "    \"title\" : submission.title,\n",
-    "    \"self\" : submission.is_self,\n",
-    "    \"text\" : submission.selftext,\n",
-    "    \"comments\" : postlist,\n",
-    "    \"author\" : submission.author,\n",
-    "    \"name\" : submission.name,\n",
-    "    \"time_created\" : submission.created_utc,\n",
-    "    \"upvote_ratio\" : submission.upvote_ratio,\n",
-    "    \"ups\" : submission.score, #this is the same as submission.ups,\n",
-    "    \"downs\" : None,\n",
-    "    \"awarders\" : submission.awarders, \n",
-    "    \"awards\" : submission.all_awardings,\n",
-    "    \"total_awards\" : None,\n",
-    "    \"url\" : submission.url # Only relevant if not a self post\n",
-    "    }\n",
+    "    content = vars(submission)\n",
     "    \n",
-    "    content[\"total_awards\"] = extract_num_rewards(content[\"awards\"])\n",
+    "    content[\"total_awards\"] = extract_num_rewards(content[\"all_awardings\"])\n",
     "    return content"
    ]
   },
