--- a/CleaningRedditData.ipynb
+++ b/CleaningRedditData.ipynb
@@ -2211,239 +2211,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "kaggle_version = pd.read_csv('Data_2021/kaggle_wsb.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>score</th>\n",
-       "      <th>id</th>\n",
-       "      <th>url</th>\n",
-       "      <th>comms_num</th>\n",
-       "      <th>created</th>\n",
-       "      <th>body</th>\n",
-       "      <th>timestamp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>It's not about the money, it's about sending a...</td>\n",
-       "      <td>55</td>\n",
-       "      <td>l6ulcx</td>\n",
-       "      <td>https://v.redd.it/6j75regs72e61</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1.611863e+09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-01-28 21:37:41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Math Professor Scott Steiner says the numbers ...</td>\n",
-       "      <td>110</td>\n",
-       "      <td>l6uibd</td>\n",
-       "      <td>https://v.redd.it/ah50lyny62e61</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1.611862e+09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-01-28 21:32:10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Exit the system</td>\n",
-       "      <td>0</td>\n",
-       "      <td>l6uhhn</td>\n",
-       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
-       "      <td>47</td>\n",
-       "      <td>1.611862e+09</td>\n",
-       "      <td>The CEO of NASDAQ pushed to halt trading “to g...</td>\n",
-       "      <td>2021-01-28 21:30:35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NEW SEC FILING FOR GME! CAN SOMEONE LESS RETAR...</td>\n",
-       "      <td>29</td>\n",
-       "      <td>l6ugk6</td>\n",
-       "      <td>https://sec.report/Document/0001193125-21-019848/</td>\n",
-       "      <td>74</td>\n",
-       "      <td>1.611862e+09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-01-28 21:28:57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Not to distract from GME, just thought our AMC...</td>\n",
-       "      <td>71</td>\n",
-       "      <td>l6ufgy</td>\n",
-       "      <td>https://i.redd.it/4h2sukb662e61.jpg</td>\n",
-       "      <td>156</td>\n",
-       "      <td>1.611862e+09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-01-28 21:26:56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46518</th>\n",
-       "      <td>NIO After Earnings, Analysis, and Valuation</td>\n",
-       "      <td>68</td>\n",
-       "      <td>n4xon5</td>\n",
-       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
-       "      <td>41</td>\n",
-       "      <td>1.620190e+09</td>\n",
-       "      <td>I'm late because I wanted to get some feedback...</td>\n",
-       "      <td>2021-05-05 07:42:20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46519</th>\n",
-       "      <td>Suncor (SU) update. They crushed earnings. Ple...</td>\n",
-       "      <td>338</td>\n",
-       "      <td>n4xfwh</td>\n",
-       "      <td>https://i.redd.it/kc9jabowy5x61.jpg</td>\n",
-       "      <td>56</td>\n",
-       "      <td>1.620189e+09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-05-05 07:31:59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46520</th>\n",
-       "      <td>YOLO NCLH</td>\n",
-       "      <td>0</td>\n",
-       "      <td>n4wrsw</td>\n",
-       "      <td>https://i.redd.it/bebc0fx3u5x61.jpg</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1.620187e+09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-05-05 07:04:58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46521</th>\n",
-       "      <td>$23k ICE calls 7/16 $125</td>\n",
-       "      <td>0</td>\n",
-       "      <td>n4wrl9</td>\n",
-       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.620187e+09</td>\n",
-       "      <td>I loved seeing its value drop from $23k to $5k...</td>\n",
-       "      <td>2021-05-05 07:04:44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46522</th>\n",
-       "      <td>[$NOK]🚀🌕 Why Nokia is massivly underated! 🚀🌕$10+</td>\n",
-       "      <td>108</td>\n",
-       "      <td>n4wqff</td>\n",
-       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
-       "      <td>58</td>\n",
-       "      <td>1.620187e+09</td>\n",
-       "      <td>#  $NOK has the potential to reach $10+, here'...</td>\n",
-       "      <td>2021-05-05 07:03:24</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>46523 rows × 8 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                   title  score      id  \\\n",
-       "0      It's not about the money, it's about sending a...     55  l6ulcx   \n",
-       "1      Math Professor Scott Steiner says the numbers ...    110  l6uibd   \n",
-       "2                                        Exit the system      0  l6uhhn   \n",
-       "3      NEW SEC FILING FOR GME! CAN SOMEONE LESS RETAR...     29  l6ugk6   \n",
-       "4      Not to distract from GME, just thought our AMC...     71  l6ufgy   \n",
-       "...                                                  ...    ...     ...   \n",
-       "46518        NIO After Earnings, Analysis, and Valuation     68  n4xon5   \n",
-       "46519  Suncor (SU) update. They crushed earnings. Ple...    338  n4xfwh   \n",
-       "46520                                          YOLO NCLH      0  n4wrsw   \n",
-       "46521                           $23k ICE calls 7/16 $125      0  n4wrl9   \n",
-       "46522   [$NOK]🚀🌕 Why Nokia is massivly underated! 🚀🌕$10+    108  n4wqff   \n",
-       "\n",
-       "                                                     url  comms_num  \\\n",
-       "0                        https://v.redd.it/6j75regs72e61          6   \n",
-       "1                        https://v.redd.it/ah50lyny62e61         23   \n",
-       "2      https://www.reddit.com/r/wallstreetbets/commen...         47   \n",
-       "3      https://sec.report/Document/0001193125-21-019848/         74   \n",
-       "4                    https://i.redd.it/4h2sukb662e61.jpg        156   \n",
-       "...                                                  ...        ...   \n",
-       "46518  https://www.reddit.com/r/wallstreetbets/commen...         41   \n",
-       "46519                https://i.redd.it/kc9jabowy5x61.jpg         56   \n",
-       "46520                https://i.redd.it/bebc0fx3u5x61.jpg         10   \n",
-       "46521  https://www.reddit.com/r/wallstreetbets/commen...          4   \n",
-       "46522  https://www.reddit.com/r/wallstreetbets/commen...         58   \n",
-       "\n",
-       "            created                                               body  \\\n",
-       "0      1.611863e+09                                                NaN   \n",
-       "1      1.611862e+09                                                NaN   \n",
-       "2      1.611862e+09  The CEO of NASDAQ pushed to halt trading “to g...   \n",
-       "3      1.611862e+09                                                NaN   \n",
-       "4      1.611862e+09                                                NaN   \n",
-       "...             ...                                                ...   \n",
-       "46518  1.620190e+09  I'm late because I wanted to get some feedback...   \n",
-       "46519  1.620189e+09                                                NaN   \n",
-       "46520  1.620187e+09                                                NaN   \n",
-       "46521  1.620187e+09  I loved seeing its value drop from $23k to $5k...   \n",
-       "46522  1.620187e+09  #  $NOK has the potential to reach $10+, here'...   \n",
-       "\n",
-       "                 timestamp  \n",
-       "0      2021-01-28 21:37:41  \n",
-       "1      2021-01-28 21:32:10  \n",
-       "2      2021-01-28 21:30:35  \n",
-       "3      2021-01-28 21:28:57  \n",
-       "4      2021-01-28 21:26:56  \n",
-       "...                    ...  \n",
-       "46518  2021-05-05 07:42:20  \n",
-       "46519  2021-05-05 07:31:59  \n",
-       "46520  2021-05-05 07:04:58  \n",
-       "46521  2021-05-05 07:04:44  \n",
-       "46522  2021-05-05 07:03:24  \n",
-       "\n",
-       "[46523 rows x 8 columns]"
+       "Index(['title', 'score', 'id', 'url', 'comms_num', 'created', 'body',\n",
+       "       'timestamp'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kaggle_version"
+    "kaggle_version.columns"
    ]
   },
   {
@@ -3862,6 +3657,20 @@
    "source": [
     "praw_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
