--- a/Sandbox/SentimentAnalysis.ipynb
+++ b/Sandbox/SentimentAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,26 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['title', 'author', 'created_datetime_utc', 'selftext', 'url',\n",
-       "       'upvote_ratio', 'ups', 'total_awards_received', 'num_comments',\n",
-       "       'num_crossposts', 'is_self', 'is_video', 'media_only', 'id',\n",
-       "       'created_utc', 'selftext_html', 'author_fullname'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "wsb.colnumumns"
+    "wsb.columns"
    ]
   },
   {
