reorganized simple eda stuff into own files

--- a/ExploratoryDataAnalysis/ExploratoryDataAnalysis.ipynb
+++ b/ExploratoryDataAnalysis/ExploratoryDataAnalysis.ipynb
@@ -12,10 +12,7 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "import sklearn.linear_model as sklm\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n"
+    "from sklearn.feature_extraction.text import CountVectorizer\n"
    ]
   },
   {
@@ -695,10 +692,7 @@
    "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "wsb['weektime'] = wsb['created_datetime_utc'].apply( lambda x : x.weekday()*24 + x.hour)\n",
-    "# Gets the number of hours since the start of the week"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -721,6 +715,9 @@
     }
    ],
    "source": [
+    "wsb['weektime'] = wsb['created_datetime_utc'].apply( lambda x : x.weekday()*24 + x.hour)\n",
+    "# Gets the number of hours since the start of the week\n",
+    "\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(26, 9))\n",
     "\n",
@@ -846,12 +843,7 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "regex = re.compile('[^a-zA-Z ]')\n",
-    "\n",
-    "for col in ['title', 'author', 'selftext']:\n",
-    "    wsb[col] = wsb[col].apply(lambda x : regex.sub('', str(x) ))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -860,13 +852,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "# wsb_text = wsb[(wsb[\"selftext\"] == True) & ( wsb.ups >= 200)]\n",
-    "#corpus = list( wsb_text[\"self_text\"])\n",
-    "#https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html\n",
-    "#https://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1319,10 +1305,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "\n",
-    "sns.lmplot(data = wsb, x = 'num_comments', y = 'ups')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1352,9 +1335,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "sns.lmplot(data = wsb[wsb.ups >= 20], x = 'num_comments', y = 'ups')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1376,9 +1357,7 @@
      ]
     }
    ],
-   "source": [
-    "sns.pairplot(data = wsb[wsb.ups >= 20][[ 'num_comments',  'ups', 'total_awards']])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
