--- a/ExploratoryDataAnalysis/Pairplots.ipynb
+++ b/ExploratoryDataAnalysis/Pairplots.ipynb
@@ -8,13 +8,72 @@
    "outputs": [],
    "source": [
     "from edahelper import *\n",
-    "wsb = pd.read_pickle('../../Data_2021/wsb_cleaned.pkl')"
+    "wsb = pd.read_pickle('../Data/wsb_cleaned.pkl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdae9e54",
+   "metadata": {},
+   "source": [
+    "## Are there any simple relations between the variables?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "904c6bb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['title', 'author', 'created_datetime_utc', 'selftext', 'url',\n",
+       "       'upvote_ratio', 'ups', 'total_awards_received', 'num_comments',\n",
+       "       'num_crossposts', 'is_self', 'is_video', 'media_only', 'id',\n",
+       "       'created_utc', 'selftext_html', 'author_fullname'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wsb.columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "65bbb161",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0d6e255",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6b20d70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(data = wsb[wsb.ups >= 20][[ 'num_comments',  'ups', 'total_awards_received', 'num_crossposts']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77b801a9",
    "metadata": {},
    "outputs": [],
    "source": []
