--- a/ExploratoryDataAnalysis/NLP.ipynb
+++ b/ExploratoryDataAnalysis/NLP.ipynb
@@ -10,8 +10,7 @@
     "from edahelper import *\n",
     "wsb = pd.read_pickle('../Data/wsb_cleaned.pkl')\n",
     "\n",
-    "# wsb_text = wsb[(wsb[\"selftext\"] == True) & ( wsb.ups >= 200)]\n",
-    "#corpus = list( wsb_text[\"self_text\"])\n",
+    "\n",
     "#https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html\n",
     "#https://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html\n",
     "\n"
@@ -20,7 +19,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9d998d7",
+   "id": "da0182a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6f3dcd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +40,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a00f1f2b",
+   "metadata": {},
+   "source": [
+    "Can we predict if a "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fda20634",
+   "id": "5a5e5c14",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -43,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b5bf680",
+   "id": "8dd165ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -51,15 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60cba0da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d511256d",
+   "id": "f5e4a6ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "197d86a1",
+   "id": "d7d7b505",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "476d2f35",
+   "id": "62dc7ab1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -93,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0632ab0b",
+   "id": "5465bd2a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -101,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bd12fb1",
+   "id": "e84abcb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dba2b01",
+   "id": "af1eeb00",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -139,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68bd5d07",
+   "id": "a8eecc4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,10 +170,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dffbc1b",
+   "id": "ccf25d55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html\n",
+    "\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)\n",
+    "#print(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d341a06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "text_clf = Pipeline([\n",
+    "    ('vect', CountVectorizer()),\n",
+    "    ('tfidf', TfidfTransformer()),\n",
+    "    ('clf', LinearRegression()),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9158cca7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import numpy as np\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    return 1/ ( 1 + np.exp(-x))\n",
+    "\n",
+    "y = list(map ( lambda x : sigmoid(x)  , wsb_text.upvote_ratio))\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X2.toarray(), y, test_size=0.33, random_state=42)\n",
+    "\n",
+    "\n",
+    "clf = LinearRegression(positive=True).fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6125beff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "results = pd.DataFrame()\n",
+    "results[\"predicted\"] = clf.predict(X_test)\n",
+    "results[\"true\"] = y_test\n",
+    "sns.scatterplot(data = results, x = \"predicted\", y = \"true\")\n"
+   ]
   }
  ],
  "metadata": {
