--- a/ExploratoryDataAnalysis/Pairplots.ipynb
+++ b/ExploratoryDataAnalysis/Pairplots.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "138c9eca",
+   "id": "a2844160",
    "metadata": {},
    "source": [
     "## Are there any simple relations between the variables?"
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b5b88a82",
+   "id": "58899bfa",
    "metadata": {},
    "outputs": [
     {
@@ -50,14 +50,12 @@
    "id": "65bbb161",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "sns.lmplot(data = subreddit_cleaned[subreddit_cleaned.ups > 40], x = \"total_awards_received\", y = \"upvote_ratio\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20b07502",
+   "id": "afbb14f9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -65,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c73305ba",
+   "id": "9ed2b068",
    "metadata": {},
    "outputs": [
     {
@@ -97,16 +95,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a0b03fd",
+   "id": "b46fe7ee",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7df1dcdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0           0\n",
+       "638242      0\n",
+       "638243      0\n",
+       "638244      0\n",
+       "638245      0\n",
+       "         ... \n",
+       "381686     76\n",
+       "940293     80\n",
+       "409000     86\n",
+       "926472     91\n",
+       "100949    101\n",
+       "Name: num_crossposts, Length: 960965, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "We may need to filter by looking at more popular"
+    "# why did the pair plot drop num cross posts?\n",
+    "wsb.num_crossposts.sort_values()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a01e68f1",
+   "id": "4eaf57f6",
    "metadata": {},
    "outputs": [],
    "source": []
